# ReCAP

./: .env.example  .gitignore  IDEA.md  README.md  pyproject.toml
acta/: __init__.py
acta/agents/: __init__.py  base.py  feedback_agent.py  intervention_verifier.py  learned_reranker_agent.py  llm_agent.py  lm_policy_agent.py  noisy_agent.py  preference_agent.py  random_agent.py
acta/controllers/: __init__.py  acta_controller.py  replay_repair_controller.py
acta/envs/: __init__.py  alfworld_adapter.py  base.py  factory.py  scienceworld_adapter.py  textworld_adapter.py  toy_adapter.py
acta/eval/: __init__.py  agent_loop.py  bootstrap_candidate_ranking.py  bootstrap_recap_metrics.py  build_action_preferences.py  compile_traces.py  (+21 more)
prompts/: alfworld_candidate_system.txt  scienceworld_candidate_system.txt
recap/: __init__.py
scripts/: run_recap_500_extra_analyses.sh  run_recap_split_robustness.py  run_recap_xhard_701_900.sh  run_recap_xhard_top10_pilot.sh  summarize_recap_run.py
tests/: test_action_reranker.py  test_agent_loop.py  test_build_action_preferences.py  test_compare_agent_runs.py  test_env_factory.py  test_eval_action_preferences.py  test_gold_demotion.py  test_intervention_gate_threshold.py  test_llm_agent.py  test_merge_trajectory_jsonl.py  test_normal_form.py  test_pair_probe.py  test_preference_agent.py  test_recap_batch_pipeline.py  test_recap_bootstrap_metrics.py  test_recap_failure_decomposition.py  test_recap_sensitivity.py  test_repair_multiplicity.py  test_rl.py  test_scienceworld_adapter.py  test_trace_edit_probe.py  test_trace_feedback.py
(+59 files in other folders)
