[project]
name = "recap"
version = "0.1.0"
description = "ReCAP: replay-certified candidate-level preference learning for language agents."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
textworld = ["textworld"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

